// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLI: index render stateless component with values 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CLI
    closeCLIOverlay={[Function]}
    isTokenOpen={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="pt-dialog-body"
        >
          <div
            className="pt-form-group"
          >
            <div
              className="pt-form-content cli-container"
            >
              <h4>
                Download the STRATO CLI to deploy apps from the command line.
              </h4>
              <div
                className="cli-content"
              >
                <p>
                  Pre-requisites:
                  <br />
                  Node JS (Version 6 and up)
                </p>
                <ol>
                  <li>
                    Once you have Node JS installed, run 
                    <code>
                      npm install -g strato-cli
                    </code>
                  </li>
                  <li>
                    Test your installation by running the 
                    <code>
                      strato --version
                    </code>
                  </li>
                </ol>
              </div>
            </div>
          </div>
        </div>,
        <div
          className="pt-dialog-footer"
        >
          <div
            className="pt-dialog-footer-actions"
          >
            <div>
              <Blueprint.Button
                onClick={[Function]}
                text="Back"
              />
              <Blueprint.Button
                intent={0}
                onClick={[Function]}
                text="Continue"
              />
            </div>
          </div>
        </div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="pt-form-group"
          >
            <div
              className="pt-form-content cli-container"
            >
              <h4>
                Download the STRATO CLI to deploy apps from the command line.
              </h4>
              <div
                className="cli-content"
              >
                <p>
                  Pre-requisites:
                  <br />
                  Node JS (Version 6 and up)
                </p>
                <ol>
                  <li>
                    Once you have Node JS installed, run 
                    <code>
                      npm install -g strato-cli
                    </code>
                  </li>
                  <li>
                    Test your installation by running the 
                    <code>
                      strato --version
                    </code>
                  </li>
                </ol>
              </div>
            </div>
          </div>,
          "className": "pt-dialog-body",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="pt-form-content cli-container"
            >
              <h4>
                Download the STRATO CLI to deploy apps from the command line.
              </h4>
              <div
                className="cli-content"
              >
                <p>
                  Pre-requisites:
                  <br />
                  Node JS (Version 6 and up)
                </p>
                <ol>
                  <li>
                    Once you have Node JS installed, run 
                    <code>
                      npm install -g strato-cli
                    </code>
                  </li>
                  <li>
                    Test your installation by running the 
                    <code>
                      strato --version
                    </code>
                  </li>
                </ol>
              </div>
            </div>,
            "className": "pt-form-group",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h4>
                  Download the STRATO CLI to deploy apps from the command line.
                </h4>,
                <div
                  className="cli-content"
                >
                  <p>
                    Pre-requisites:
                    <br />
                    Node JS (Version 6 and up)
                  </p>
                  <ol>
                    <li>
                      Once you have Node JS installed, run 
                      <code>
                        npm install -g strato-cli
                      </code>
                    </li>
                    <li>
                      Test your installation by running the 
                      <code>
                        strato --version
                      </code>
                    </li>
                  </ol>
                </div>,
              ],
              "className": "pt-form-content cli-container",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Download the STRATO CLI to deploy apps from the command line.",
                },
                "ref": null,
                "rendered": "Download the STRATO CLI to deploy apps from the command line.",
                "type": "h4",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <p>
                      Pre-requisites:
                      <br />
                      Node JS (Version 6 and up)
                    </p>,
                    <ol>
                      <li>
                        Once you have Node JS installed, run 
                        <code>
                          npm install -g strato-cli
                        </code>
                      </li>
                      <li>
                        Test your installation by running the 
                        <code>
                          strato --version
                        </code>
                      </li>
                    </ol>,
                  ],
                  "className": "cli-content",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        "Pre-requisites:",
                        <br />,
                        "Node JS (Version 6 and up)",
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      "Pre-requisites:",
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {},
                        "ref": null,
                        "rendered": null,
                        "type": "br",
                      },
                      "Node JS (Version 6 and up)",
                    ],
                    "type": "p",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <li>
                          Once you have Node JS installed, run 
                          <code>
                            npm install -g strato-cli
                          </code>
                        </li>,
                        <li>
                          Test your installation by running the 
                          <code>
                            strato --version
                          </code>
                        </li>,
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": Array [
                            "Once you have Node JS installed, run ",
                            <code>
                              npm install -g strato-cli
                            </code>,
                          ],
                        },
                        "ref": null,
                        "rendered": Array [
                          "Once you have Node JS installed, run ",
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": "npm install -g strato-cli",
                            },
                            "ref": null,
                            "rendered": "npm install -g strato-cli",
                            "type": "code",
                          },
                        ],
                        "type": "li",
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": Array [
                            "Test your installation by running the ",
                            <code>
                              strato --version
                            </code>,
                          ],
                        },
                        "ref": null,
                        "rendered": Array [
                          "Test your installation by running the ",
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": "strato --version",
                            },
                            "ref": null,
                            "rendered": "strato --version",
                            "type": "code",
                          },
                        ],
                        "type": "li",
                      },
                    ],
                    "type": "ol",
                  },
                ],
                "type": "div",
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="pt-dialog-footer-actions"
          >
            <div>
              <Blueprint.Button
                onClick={[Function]}
                text="Back"
              />
              <Blueprint.Button
                intent={0}
                onClick={[Function]}
                text="Continue"
              />
            </div>
          </div>,
          "className": "pt-dialog-footer",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div>
              <Blueprint.Button
                onClick={[Function]}
                text="Back"
              />
              <Blueprint.Button
                intent={0}
                onClick={[Function]}
                text="Continue"
              />
            </div>,
            "className": "pt-dialog-footer-actions",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Blueprint.Button
                  onClick={[Function]}
                  text="Back"
                />,
                <Blueprint.Button
                  intent={0}
                  onClick={[Function]}
                  text="Continue"
                />,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "onClick": [Function],
                  "text": "Back",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "intent": 0,
                  "onClick": [Function],
                  "text": "Continue",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="pt-dialog-body"
          >
            <div
              className="pt-form-group"
            >
              <div
                className="pt-form-content cli-container"
              >
                <h4>
                  Download the STRATO CLI to deploy apps from the command line.
                </h4>
                <div
                  className="cli-content"
                >
                  <p>
                    Pre-requisites:
                    <br />
                    Node JS (Version 6 and up)
                  </p>
                  <ol>
                    <li>
                      Once you have Node JS installed, run 
                      <code>
                        npm install -g strato-cli
                      </code>
                    </li>
                    <li>
                      Test your installation by running the 
                      <code>
                        strato --version
                      </code>
                    </li>
                  </ol>
                </div>
              </div>
            </div>
          </div>,
          <div
            className="pt-dialog-footer"
          >
            <div
              className="pt-dialog-footer-actions"
            >
              <div>
                <Blueprint.Button
                  onClick={[Function]}
                  text="Back"
                />
                <Blueprint.Button
                  intent={0}
                  onClick={[Function]}
                  text="Continue"
                />
              </div>
            </div>
          </div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="pt-form-group"
            >
              <div
                className="pt-form-content cli-container"
              >
                <h4>
                  Download the STRATO CLI to deploy apps from the command line.
                </h4>
                <div
                  className="cli-content"
                >
                  <p>
                    Pre-requisites:
                    <br />
                    Node JS (Version 6 and up)
                  </p>
                  <ol>
                    <li>
                      Once you have Node JS installed, run 
                      <code>
                        npm install -g strato-cli
                      </code>
                    </li>
                    <li>
                      Test your installation by running the 
                      <code>
                        strato --version
                      </code>
                    </li>
                  </ol>
                </div>
              </div>
            </div>,
            "className": "pt-dialog-body",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="pt-form-content cli-container"
              >
                <h4>
                  Download the STRATO CLI to deploy apps from the command line.
                </h4>
                <div
                  className="cli-content"
                >
                  <p>
                    Pre-requisites:
                    <br />
                    Node JS (Version 6 and up)
                  </p>
                  <ol>
                    <li>
                      Once you have Node JS installed, run 
                      <code>
                        npm install -g strato-cli
                      </code>
                    </li>
                    <li>
                      Test your installation by running the 
                      <code>
                        strato --version
                      </code>
                    </li>
                  </ol>
                </div>
              </div>,
              "className": "pt-form-group",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h4>
                    Download the STRATO CLI to deploy apps from the command line.
                  </h4>,
                  <div
                    className="cli-content"
                  >
                    <p>
                      Pre-requisites:
                      <br />
                      Node JS (Version 6 and up)
                    </p>
                    <ol>
                      <li>
                        Once you have Node JS installed, run 
                        <code>
                          npm install -g strato-cli
                        </code>
                      </li>
                      <li>
                        Test your installation by running the 
                        <code>
                          strato --version
                        </code>
                      </li>
                    </ol>
                  </div>,
                ],
                "className": "pt-form-content cli-container",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Download the STRATO CLI to deploy apps from the command line.",
                  },
                  "ref": null,
                  "rendered": "Download the STRATO CLI to deploy apps from the command line.",
                  "type": "h4",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <p>
                        Pre-requisites:
                        <br />
                        Node JS (Version 6 and up)
                      </p>,
                      <ol>
                        <li>
                          Once you have Node JS installed, run 
                          <code>
                            npm install -g strato-cli
                          </code>
                        </li>
                        <li>
                          Test your installation by running the 
                          <code>
                            strato --version
                          </code>
                        </li>
                      </ol>,
                    ],
                    "className": "cli-content",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          "Pre-requisites:",
                          <br />,
                          "Node JS (Version 6 and up)",
                        ],
                      },
                      "ref": null,
                      "rendered": Array [
                        "Pre-requisites:",
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {},
                          "ref": null,
                          "rendered": null,
                          "type": "br",
                        },
                        "Node JS (Version 6 and up)",
                      ],
                      "type": "p",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          <li>
                            Once you have Node JS installed, run 
                            <code>
                              npm install -g strato-cli
                            </code>
                          </li>,
                          <li>
                            Test your installation by running the 
                            <code>
                              strato --version
                            </code>
                          </li>,
                        ],
                      },
                      "ref": null,
                      "rendered": Array [
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": Array [
                              "Once you have Node JS installed, run ",
                              <code>
                                npm install -g strato-cli
                              </code>,
                            ],
                          },
                          "ref": null,
                          "rendered": Array [
                            "Once you have Node JS installed, run ",
                            Object {
                              "instance": null,
                              "key": undefined,
                              "nodeType": "host",
                              "props": Object {
                                "children": "npm install -g strato-cli",
                              },
                              "ref": null,
                              "rendered": "npm install -g strato-cli",
                              "type": "code",
                            },
                          ],
                          "type": "li",
                        },
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": Array [
                              "Test your installation by running the ",
                              <code>
                                strato --version
                              </code>,
                            ],
                          },
                          "ref": null,
                          "rendered": Array [
                            "Test your installation by running the ",
                            Object {
                              "instance": null,
                              "key": undefined,
                              "nodeType": "host",
                              "props": Object {
                                "children": "strato --version",
                              },
                              "ref": null,
                              "rendered": "strato --version",
                              "type": "code",
                            },
                          ],
                          "type": "li",
                        },
                      ],
                      "type": "ol",
                    },
                  ],
                  "type": "div",
                },
              ],
              "type": "div",
            },
            "type": "div",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="pt-dialog-footer-actions"
            >
              <div>
                <Blueprint.Button
                  onClick={[Function]}
                  text="Back"
                />
                <Blueprint.Button
                  intent={0}
                  onClick={[Function]}
                  text="Continue"
                />
              </div>
            </div>,
            "className": "pt-dialog-footer",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div>
                <Blueprint.Button
                  onClick={[Function]}
                  text="Back"
                />
                <Blueprint.Button
                  intent={0}
                  onClick={[Function]}
                  text="Continue"
                />
              </div>,
              "className": "pt-dialog-footer-actions",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Blueprint.Button
                    onClick={[Function]}
                    text="Back"
                  />,
                  <Blueprint.Button
                    intent={0}
                    onClick={[Function]}
                    text="Continue"
                  />,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "onClick": [Function],
                    "text": "Back",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "intent": 0,
                    "onClick": [Function],
                    "text": "Continue",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`CLI: index render stateless component without values 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CLI
    closeCLIOverlay={[Function]}
    isTokenOpen={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="pt-dialog-body"
        >
          <div
            className="pt-form-group"
          >
            <div
              className="pt-form-content cli-container"
            >
              <h4>
                Download the STRATO CLI to deploy apps from the command line.
              </h4>
              <div
                className="cli-content"
              >
                <p>
                  Pre-requisites:
                  <br />
                  Node JS (Version 6 and up)
                </p>
                <ol>
                  <li>
                    Once you have Node JS installed, run 
                    <code>
                      npm install -g strato-cli
                    </code>
                  </li>
                  <li>
                    Test your installation by running the 
                    <code>
                      strato --version
                    </code>
                  </li>
                </ol>
              </div>
            </div>
          </div>
        </div>,
        <div
          className="pt-dialog-footer"
        >
          <div
            className="pt-dialog-footer-actions"
          >
            <div>
              <Blueprint.Button
                onClick={[Function]}
                text="Back"
              />
              <Blueprint.Button
                intent={0}
                onClick={[Function]}
                text="Continue"
              />
            </div>
          </div>
        </div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="pt-form-group"
          >
            <div
              className="pt-form-content cli-container"
            >
              <h4>
                Download the STRATO CLI to deploy apps from the command line.
              </h4>
              <div
                className="cli-content"
              >
                <p>
                  Pre-requisites:
                  <br />
                  Node JS (Version 6 and up)
                </p>
                <ol>
                  <li>
                    Once you have Node JS installed, run 
                    <code>
                      npm install -g strato-cli
                    </code>
                  </li>
                  <li>
                    Test your installation by running the 
                    <code>
                      strato --version
                    </code>
                  </li>
                </ol>
              </div>
            </div>
          </div>,
          "className": "pt-dialog-body",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="pt-form-content cli-container"
            >
              <h4>
                Download the STRATO CLI to deploy apps from the command line.
              </h4>
              <div
                className="cli-content"
              >
                <p>
                  Pre-requisites:
                  <br />
                  Node JS (Version 6 and up)
                </p>
                <ol>
                  <li>
                    Once you have Node JS installed, run 
                    <code>
                      npm install -g strato-cli
                    </code>
                  </li>
                  <li>
                    Test your installation by running the 
                    <code>
                      strato --version
                    </code>
                  </li>
                </ol>
              </div>
            </div>,
            "className": "pt-form-group",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h4>
                  Download the STRATO CLI to deploy apps from the command line.
                </h4>,
                <div
                  className="cli-content"
                >
                  <p>
                    Pre-requisites:
                    <br />
                    Node JS (Version 6 and up)
                  </p>
                  <ol>
                    <li>
                      Once you have Node JS installed, run 
                      <code>
                        npm install -g strato-cli
                      </code>
                    </li>
                    <li>
                      Test your installation by running the 
                      <code>
                        strato --version
                      </code>
                    </li>
                  </ol>
                </div>,
              ],
              "className": "pt-form-content cli-container",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Download the STRATO CLI to deploy apps from the command line.",
                },
                "ref": null,
                "rendered": "Download the STRATO CLI to deploy apps from the command line.",
                "type": "h4",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <p>
                      Pre-requisites:
                      <br />
                      Node JS (Version 6 and up)
                    </p>,
                    <ol>
                      <li>
                        Once you have Node JS installed, run 
                        <code>
                          npm install -g strato-cli
                        </code>
                      </li>
                      <li>
                        Test your installation by running the 
                        <code>
                          strato --version
                        </code>
                      </li>
                    </ol>,
                  ],
                  "className": "cli-content",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        "Pre-requisites:",
                        <br />,
                        "Node JS (Version 6 and up)",
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      "Pre-requisites:",
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {},
                        "ref": null,
                        "rendered": null,
                        "type": "br",
                      },
                      "Node JS (Version 6 and up)",
                    ],
                    "type": "p",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <li>
                          Once you have Node JS installed, run 
                          <code>
                            npm install -g strato-cli
                          </code>
                        </li>,
                        <li>
                          Test your installation by running the 
                          <code>
                            strato --version
                          </code>
                        </li>,
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": Array [
                            "Once you have Node JS installed, run ",
                            <code>
                              npm install -g strato-cli
                            </code>,
                          ],
                        },
                        "ref": null,
                        "rendered": Array [
                          "Once you have Node JS installed, run ",
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": "npm install -g strato-cli",
                            },
                            "ref": null,
                            "rendered": "npm install -g strato-cli",
                            "type": "code",
                          },
                        ],
                        "type": "li",
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": Array [
                            "Test your installation by running the ",
                            <code>
                              strato --version
                            </code>,
                          ],
                        },
                        "ref": null,
                        "rendered": Array [
                          "Test your installation by running the ",
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": "strato --version",
                            },
                            "ref": null,
                            "rendered": "strato --version",
                            "type": "code",
                          },
                        ],
                        "type": "li",
                      },
                    ],
                    "type": "ol",
                  },
                ],
                "type": "div",
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="pt-dialog-footer-actions"
          >
            <div>
              <Blueprint.Button
                onClick={[Function]}
                text="Back"
              />
              <Blueprint.Button
                intent={0}
                onClick={[Function]}
                text="Continue"
              />
            </div>
          </div>,
          "className": "pt-dialog-footer",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div>
              <Blueprint.Button
                onClick={[Function]}
                text="Back"
              />
              <Blueprint.Button
                intent={0}
                onClick={[Function]}
                text="Continue"
              />
            </div>,
            "className": "pt-dialog-footer-actions",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Blueprint.Button
                  onClick={[Function]}
                  text="Back"
                />,
                <Blueprint.Button
                  intent={0}
                  onClick={[Function]}
                  text="Continue"
                />,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "onClick": [Function],
                  "text": "Back",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "intent": 0,
                  "onClick": [Function],
                  "text": "Continue",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="pt-dialog-body"
          >
            <div
              className="pt-form-group"
            >
              <div
                className="pt-form-content cli-container"
              >
                <h4>
                  Download the STRATO CLI to deploy apps from the command line.
                </h4>
                <div
                  className="cli-content"
                >
                  <p>
                    Pre-requisites:
                    <br />
                    Node JS (Version 6 and up)
                  </p>
                  <ol>
                    <li>
                      Once you have Node JS installed, run 
                      <code>
                        npm install -g strato-cli
                      </code>
                    </li>
                    <li>
                      Test your installation by running the 
                      <code>
                        strato --version
                      </code>
                    </li>
                  </ol>
                </div>
              </div>
            </div>
          </div>,
          <div
            className="pt-dialog-footer"
          >
            <div
              className="pt-dialog-footer-actions"
            >
              <div>
                <Blueprint.Button
                  onClick={[Function]}
                  text="Back"
                />
                <Blueprint.Button
                  intent={0}
                  onClick={[Function]}
                  text="Continue"
                />
              </div>
            </div>
          </div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="pt-form-group"
            >
              <div
                className="pt-form-content cli-container"
              >
                <h4>
                  Download the STRATO CLI to deploy apps from the command line.
                </h4>
                <div
                  className="cli-content"
                >
                  <p>
                    Pre-requisites:
                    <br />
                    Node JS (Version 6 and up)
                  </p>
                  <ol>
                    <li>
                      Once you have Node JS installed, run 
                      <code>
                        npm install -g strato-cli
                      </code>
                    </li>
                    <li>
                      Test your installation by running the 
                      <code>
                        strato --version
                      </code>
                    </li>
                  </ol>
                </div>
              </div>
            </div>,
            "className": "pt-dialog-body",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="pt-form-content cli-container"
              >
                <h4>
                  Download the STRATO CLI to deploy apps from the command line.
                </h4>
                <div
                  className="cli-content"
                >
                  <p>
                    Pre-requisites:
                    <br />
                    Node JS (Version 6 and up)
                  </p>
                  <ol>
                    <li>
                      Once you have Node JS installed, run 
                      <code>
                        npm install -g strato-cli
                      </code>
                    </li>
                    <li>
                      Test your installation by running the 
                      <code>
                        strato --version
                      </code>
                    </li>
                  </ol>
                </div>
              </div>,
              "className": "pt-form-group",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h4>
                    Download the STRATO CLI to deploy apps from the command line.
                  </h4>,
                  <div
                    className="cli-content"
                  >
                    <p>
                      Pre-requisites:
                      <br />
                      Node JS (Version 6 and up)
                    </p>
                    <ol>
                      <li>
                        Once you have Node JS installed, run 
                        <code>
                          npm install -g strato-cli
                        </code>
                      </li>
                      <li>
                        Test your installation by running the 
                        <code>
                          strato --version
                        </code>
                      </li>
                    </ol>
                  </div>,
                ],
                "className": "pt-form-content cli-container",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Download the STRATO CLI to deploy apps from the command line.",
                  },
                  "ref": null,
                  "rendered": "Download the STRATO CLI to deploy apps from the command line.",
                  "type": "h4",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <p>
                        Pre-requisites:
                        <br />
                        Node JS (Version 6 and up)
                      </p>,
                      <ol>
                        <li>
                          Once you have Node JS installed, run 
                          <code>
                            npm install -g strato-cli
                          </code>
                        </li>
                        <li>
                          Test your installation by running the 
                          <code>
                            strato --version
                          </code>
                        </li>
                      </ol>,
                    ],
                    "className": "cli-content",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          "Pre-requisites:",
                          <br />,
                          "Node JS (Version 6 and up)",
                        ],
                      },
                      "ref": null,
                      "rendered": Array [
                        "Pre-requisites:",
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {},
                          "ref": null,
                          "rendered": null,
                          "type": "br",
                        },
                        "Node JS (Version 6 and up)",
                      ],
                      "type": "p",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          <li>
                            Once you have Node JS installed, run 
                            <code>
                              npm install -g strato-cli
                            </code>
                          </li>,
                          <li>
                            Test your installation by running the 
                            <code>
                              strato --version
                            </code>
                          </li>,
                        ],
                      },
                      "ref": null,
                      "rendered": Array [
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": Array [
                              "Once you have Node JS installed, run ",
                              <code>
                                npm install -g strato-cli
                              </code>,
                            ],
                          },
                          "ref": null,
                          "rendered": Array [
                            "Once you have Node JS installed, run ",
                            Object {
                              "instance": null,
                              "key": undefined,
                              "nodeType": "host",
                              "props": Object {
                                "children": "npm install -g strato-cli",
                              },
                              "ref": null,
                              "rendered": "npm install -g strato-cli",
                              "type": "code",
                            },
                          ],
                          "type": "li",
                        },
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": Array [
                              "Test your installation by running the ",
                              <code>
                                strato --version
                              </code>,
                            ],
                          },
                          "ref": null,
                          "rendered": Array [
                            "Test your installation by running the ",
                            Object {
                              "instance": null,
                              "key": undefined,
                              "nodeType": "host",
                              "props": Object {
                                "children": "strato --version",
                              },
                              "ref": null,
                              "rendered": "strato --version",
                              "type": "code",
                            },
                          ],
                          "type": "li",
                        },
                      ],
                      "type": "ol",
                    },
                  ],
                  "type": "div",
                },
              ],
              "type": "div",
            },
            "type": "div",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="pt-dialog-footer-actions"
            >
              <div>
                <Blueprint.Button
                  onClick={[Function]}
                  text="Back"
                />
                <Blueprint.Button
                  intent={0}
                  onClick={[Function]}
                  text="Continue"
                />
              </div>
            </div>,
            "className": "pt-dialog-footer",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div>
                <Blueprint.Button
                  onClick={[Function]}
                  text="Back"
                />
                <Blueprint.Button
                  intent={0}
                  onClick={[Function]}
                  text="Continue"
                />
              </div>,
              "className": "pt-dialog-footer-actions",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Blueprint.Button
                    onClick={[Function]}
                    text="Back"
                  />,
                  <Blueprint.Button
                    intent={0}
                    onClick={[Function]}
                    text="Continue"
                  />,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "onClick": [Function],
                    "text": "Back",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "intent": 0,
                    "onClick": [Function],
                    "text": "Continue",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;
